--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,10 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 
+/.idea
+/target/classes/META-INF
+/.settings
+/*.hprof
+/Deep-Understanding-Of-JVM.iml
+/.classpath
+/.project
